<resources>
    <string name="app_name">AndyLearningPoint</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_exit">Exit</string>
    <string name="action_music">Music</string>
    <string name="action_camera">Camera</string>

    <!-- Login Module -->
    <string name="username">Username :</string>
    <string name="password">Password :</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="title_activity_home">Home Activity</string>
    <string name="Toast">My Custom Toast</string>

    <string name="dummy_email">admin@epaisa.com</string>
    <string name="dummy_password">123123</string>
    <string name="Sign_in">Login</string>
    <string name="Success">Success</string>
    <string name="Loading">Loading..</string>
    <string name="Loading_Complete">Loading Complete, button is disabled</string>
    <string name="search_hint">Search Places</string>
    <string name="search_settings">Search Places</string>

    <string name="btn_en">English</string>
    <string name="btn_hi">Hindi</string>
    <string name="addressHint">Enter location</string>
    <string name="searchPageTitle">Enter location to search:</string>
    <string name="searchButtonText">Search</string>
    <string name="location_not_found">Location not found</string>
    <string name="pick">Pick Your Theme</string>
    <string name="agree">I agree to use these theme terms and condition</string>


    <string name="title_text">Title Bar Text</string>
    <string name="subtitle_text">Sub-title text</string>
    <string name="enter_email">Enter your Email</string>

    <string-array name="chapter_list">
        <item name="MainActivity">MainActivity</item>
        <item name="AndroidLifeCycle">AndroidLifeCycle</item>
        <item name="IntentAction">IntentAction</item>
        <item name="ListExample">ListExample</item>
        <item name="SpinnerExample">SpinnerExample</item>
        <item name="AlertDialogExample">AlertDialogExample</item>
        <item name="ServiceExample">ServiceExample</item>
        <item name="CustomToastExample">CustomToastExample</item>
        <item name="CustomListExample">CustomListExample</item>
        <item name="DatabaseManagementActivity">DatabaseManagementActivity</item>
        <item name="BsonActivity">BsonActivity</item>
        <item name="WebViewActivity">WebViewActivity</item>
        <item name="MapExplorer">MapExplorer</item>
        <item name="AndroidSQLiteTutorialActivity">AndroidSQLiteTutorialActivity</item>
    </string-array>
</resources>
