<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:orientation="vertical"
        android:paddingBottom="40dp"
        android:paddingTop="40dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/music" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#FFF"
            android:orientation="horizontal">

            <TextView
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter User Name"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#FFF"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:text="@string/password"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter password"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#FFF"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_reseqt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:text="@string/reset" />

            <Button
                android:id="@+id/btn_reqset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:text="@string/reset" />

            <Button
                android:id="@+id/btn_rqeset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:text="@string/reset" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:text="@string/submit" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="imageClick"
            android:src="@mipmap/exit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/backgroung"
            android:drawableLeft="@mipmap/rewards"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="Mine and Yours Profile"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@mipmap/wallets"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:background="@drawable/backg"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:text="ListList"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@mipmap/save"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:background="@drawable/backgr"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="Registration"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>